mobile design finished

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
   <div class="container">
-    <div class="sedans">
+    <div class="sedans box">
       <div class="logo">
         <img src="images/icon-sedans.svg" alt="car-icon">
       </div>
@@ -40,7 +40,7 @@
       <button>Learn More</button>
     </div>
     
-    <div class="suvs">
+    <div class="suvs box">
       <div class="logo">
         <img src="images/icon-suvs.svg" alt="car-icon">
       </div>
@@ -52,7 +52,7 @@
       <button>Learn More</button>
     </div>
 
-    <div class="luxury">
+    <div class="luxury box">
       <div class="logo">
         <img src="images/icon-luxury.svg" alt="car-icon">
       </div>
